<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Complex_10" Id="{728f6788-9270-4415-b925-bbee152e7b6b}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Complex_10 :
STRUCT
	nNumber : UDINT;	
	stEUInformation : Tc3_OpcUa.UA_EUInformation;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>