<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Complex_9" Id="{b949bc42-d29c-4e15-bc78-2fff8aaf3877}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_Complex_9 :
STRUCT
	bBool : BOOL;
	stOptionSetSample : UA_OptionSet_Sample;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>